# IotKit-Device

./: README.md
demo/cc3200/: app_cfg.h  main.c  uart_if.c
demo/cc3200/ccs/: .cproject  .project
demo/win32/: main.c
examples/doorbell/: CMakeLists.txt  cfg.c  cfg.h  common.h  fh8610.c  fh8610.h  gpio_if.c  gpio_if.h  logger.c  logger.h  main.c  network_common.c  pinmux.c  pinmux.h  platform_cc3200.c  platform_windows.c  sl.c  sl.h  spi_protocol.h  startup_ccs.c  uart_if.c  uart_if.h  udma_if.c
examples/doorbell/ccs/: .cproject  .gitignore  .project  cc3200v1p32.cmd
include/: iotk_api.h
include/iotk/: iotk_api.h  iotk_p2p.h  iotk_spi_cc3200.h
include/logger/: logger.h  logger_config.h  logger_marcos.h
include/msgpack/: msgpack.h  msgpack_port.h  msgpack_reader.h  msgpack_writer.h
include/stream/: istream.h  streambuf.h
iotk_pal/: .gitignore  CMakeLists.txt  README.md  init.py
iotk_pal/ccs/: .ccsproject  .cproject  .project
iotk_pal/inc/iotk/: iotk_pal.h  iotk_pal_crt.h  iotk_pal_os.h  iotk_pal_osi.h  iotk_pal_socket.h
iotk_pal/src/: iotk_crt_simplelink.c  iotk_crt_windows.c  iotk_os_freertos.c  iotk_os_linux.c  iotk_os_osi.c  iotk_os_rtthread.c  iotk_os_ucos.c  iotk_os_windows.c  iotk_socket_simplelink.c  iotk_socket_windows.c
